log
Thu 09 Mar 2023 03:41:47 PM UTC: 
 tests:  0|7
total_score: 0/70
9dd0fea
Thu 09 Mar 2023 03:53:00 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:12: error: expected expression before ‘;’ token
   18 |   subA = a*;
      |            ^
exercises.c:19:12: error: expected expression before ‘;’ token
   19 |   subB = b*;
      |            ^
exercises.c:20:5: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   20 |   a = subB;
      |     ^
exercises.c:21:5: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   21 |   b = subA;
      |     ^
cc1: all warnings being treated as errors
Compilation failed
58d6b88
